--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,10 @@
 upstream boat {
-    server  www.boat.bva.bund.de;
+    server  www.boat.bva.bund.de:443;
 }
 
-upstream backend {
-    server  backend:8000;
-}
+#upstream backend {
+#    server  backend:8000;
+#}
 
 server {
     listen       80;
@@ -23,15 +23,18 @@ server {
     location /api {
         proxy_pass https://boat;
         proxy_pass_header ContentType;
+	proxy_ssl_session_reuse on;
     }
 
     location /auth {
-        proxy_pass http://boat;
+        proxy_pass https://boat;
+        proxy_pass_header ContentType;
+	proxy_ssl_session_reuse on;
     }
 
-    location /rest {
-        proxy_pass http://backend;
-    }
+#    location /rest {
+#        proxy_pass http://backend;
+#    }
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
