--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boat3_importer_frontend",
+  "name": "boat3_extensions_frontend",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
