--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -79,7 +79,7 @@
             },
             "development": {
               "browserTarget": "frontend:build:development",
-              "proxyConfig": "src/proxy.config.json"
+              "proxyConfig": "src/proxy.config.js"
             }
           },
           "defaultConfiguration": "development"
