updated proxy config

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -231,6 +231,6 @@ ProxyPassReverse "/api" "https://www.boat.bva.bund.de/api"
 ProxyPass "/auth/login" "https://www.boat.bva.bund.de/auth/login"
 ProxyPassReverse "/auth/login" "https://www.boat.bva.bund.de/auth/login"
 
-SetEnv HTTP_PROXY
-ProxyRemote "https://www.boat.bva.bund.de" "${HTTP_PROXY}"
+PassEnv HTTP_PROXY
+ProxyRemote "https://www.boat.bva.bund.de" "http://${HTTP_PROXY}"
 
