Moved proxy schema into variable

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -232,5 +232,5 @@ ProxyPass "/auth/login" "https://www.boat.bva.bund.de/auth/login"
 ProxyPassReverse "/auth/login" "https://www.boat.bva.bund.de/auth/login"
 
 PassEnv HTTP_PROXY
-ProxyRemote "https://www.boat.bva.bund.de" "http://${HTTP_PROXY}"
+ProxyRemote "https://www.boat.bva.bund.de" "${HTTP_PROXY}"
 
