--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,13 @@
   "description": "BOAT3 importer backend",
   "main": "index.ts",
   "scripts": {
-    "test": "mocha --timeout 5000"
+    "test": "mocha --timeout 5000",
+    "prep": "tsc --declaration && mocha --timeout 5000 && grunt bump",
+    "comp": "tsc --declaration",
+    "dev": "ts-node-dev -r dotenv/config --respawn --transpile-only ./src/app.ts",
+    "prod": "tsc && node ./build/app.js",
+    "docker": "docker build -t rongem/cmdb-backend .",
+    "start": "node dist/app.js"
   },
   "keywords": [
     "BOAT"
@@ -12,20 +18,21 @@
   "author": "Michael Ronge",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "@types/express-ntlm": "^2.3.2",
     "@types/express-validator": "^3.0.0",
     "@types/mssql": "^6.0.8",
-    "@types/node": "^15.3.0",
+    "@types/node": "^15.12.1",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "dotenv": "^9.0.2",
-    "grunt": "^1.4.0",
+    "grunt": "^1.4.1",
     "grunt-bump": "^0.8.0",
     "mocha": "^8.4.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-ntlm": "^2.5.2",
     "express-validator": "^6.11.1",
