--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "author": "Michael Ronge",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/express-ntlm": "^2.3.2",
     "@types/express-validator": "^3.0.0",
