--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "grunt": "^1.4.1",
     "grunt-bump": "^0.8.0",
     "mocha": "^8.4.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
