--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,11 +31,11 @@
     "@angular/compiler-cli": "~12.0.3",
     "@angular/localize": "^12.0.3",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.14",
     "@types/xlsx": "0.0.36",
     "https-proxy-agent": "^5.0.0",
     "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
