--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "0.0.1",
   "description": "BOAT3 importer backend",
-  "main": "index.ts",
+  "main": "src/app.ts",
   "scripts": {
     "test": "mocha --timeout 5000",
     "prep": "tsc --declaration && mocha --timeout 5000 && grunt bump",
