--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "nemo": "^4.12.2",
     "typescript": "~4.2.3"
   }
 }
