--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@ngrx/effects": "^12.1.0",
+    "@ngrx/store": "^12.1.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
+    "tslib": "^2.3.0",
     "xlsx": "^0.17.0",
     "zone.js": "~0.11.4"
   },
@@ -35,7 +37,7 @@
     "@types/xlsx": "0.0.36",
     "https-proxy-agent": "^5.0.0",
     "jasmine-core": "~3.7.0",
-    "karma": "^6.3.3",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
