--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.0.5",
     "@ngrx/effects": "^12.1.0",
     "@ngrx/store": "^12.1.0",
+    "@ngrx/store-devtools": "^12.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.17.0",
