--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,35 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.4",
-    "@angular/common": "~12.0.4",
-    "@angular/compiler": "~12.0.4",
-    "@angular/core": "~12.0.4",
-    "@angular/forms": "~12.0.4",
-    "@angular/platform-browser": "~12.0.4",
-    "@angular/platform-browser-dynamic": "~12.0.4",
-    "@angular/router": "~12.0.4",
+    "@angular/animations": "~12.0.5",
+    "@angular/common": "~12.0.5",
+    "@angular/compiler": "~12.0.5",
+    "@angular/core": "~12.0.5",
+    "@angular/forms": "~12.0.5",
+    "@angular/platform-browser": "~12.0.5",
+    "@angular/platform-browser-dynamic": "~12.0.5",
+    "@angular/router": "~12.0.5",
+    "@ngrx/effects": "^12.1.0",
+    "@ngrx/store": "^12.1.0",
+    "@ngrx/store-devtools": "^12.1.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
+    "tslib": "^2.3.0",
     "xlsx": "^0.17.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.4",
-    "@angular/cli": "~12.0.4",
-    "@angular/compiler-cli": "~12.0.4",
-    "@angular/localize": "^12.0.4",
+    "@angular-devkit/build-angular": "~12.0.5",
+    "@angular/cli": "~12.0.5",
+    "@angular/compiler-cli": "~12.0.5",
+    "@angular/localize": "^12.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.15",
     "@types/xlsx": "0.0.36",
     "https-proxy-agent": "^5.0.0",
     "jasmine-core": "~3.7.0",
-    "karma": "^6.3.3",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "nemo": "^4.12.2",
     "typescript": "~4.2.3"
   }
 }
