--- a/Dockerfile.ep-frontend
+++ b/Dockerfile.ep-frontend
@@ -2,7 +2,8 @@ FROM node AS build
 WORKDIR /usr/app
 
 COPY ./frontend/package*.json ./
-#RUN npm update -g # only if image was too old
+RUN npm update -g # only if image was too old
+RUN npm install npm@latest -g
 RUN npm install
 COPY ./frontend/ ./
 RUN npm run build:prod
