--- a/Dockerfile.ep-frontend
+++ b/Dockerfile.ep-frontend
@@ -6,6 +6,8 @@ RUN npm update -g # only if image was too old
 RUN npm install npm@latest -g
 RUN npm install
 COPY ./frontend/ ./
+RUN mkdir dist
+RUN mkdir dist/frontend
 RUN npm run build:prod
 
 FROM httpd
