--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -5,6 +5,8 @@ COPY ./frontend/package*.json ./
 #RUN npm update -g # only if image was too old
 RUN npm install
 COPY ./frontend/ ./
+RUN mkdir dist
+RUN mkdir dist/frontend
 RUN npm run build:prod
 
 FROM nginx
