--- a/Dockerfile.ep-frontend
+++ b/Dockerfile.ep-frontend
@@ -1,4 +1,4 @@
-FROM node AS build
+FROM node:14 AS build
 WORKDIR /usr/app
 
 COPY ./frontend/package*.json ./
@@ -6,8 +6,6 @@ RUN npm update -g # only if image was too old
 RUN npm install npm@latest -g
 RUN npm install
 COPY ./frontend/ ./
-RUN mkdir dist
-RUN mkdir dist/frontend
 RUN npm run build:prod
 
 FROM httpd
