--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,12 +1,10 @@
-FROM node AS build
+FROM node:14 AS build
 WORKDIR /usr/app
 
 COPY ./frontend/package*.json ./
 #RUN npm update -g # only if image was too old
 RUN npm install
 COPY ./frontend/ ./
-RUN mkdir dist
-RUN mkdir dist/frontend
 RUN npm run build:prod
 
 FROM nginx
