--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -5,6 +5,7 @@ WORKDIR /usr/app
 # install dependencies
 COPY ./backend/package*.json ./
 #RUN npm update -g # only if image was too old
+RUN npm install npm@latest -g
 RUN npm install
 COPY ./backend/ ./
 RUN npm run comp
@@ -16,7 +17,8 @@ WORKDIR /usr/app
 # install dependencies
 COPY ./backend/package*.json ./
 COPY --from=build /usr/app/dist ./dist
-#RUN npm update -g # only if image was too old
+RUN npm install npm@latest -g
+RUN npm update -g # only if image was too old
 RUN npm ci --only-production
 
 # port
