--- a/Dockerfile.ep-frontend
+++ b/Dockerfile.ep-frontend
@@ -1,8 +1,7 @@
-FROM node:14 AS build
+FROM node:lts AS build
 WORKDIR /usr/app
 
 COPY ./frontend/package*.json ./
-RUN npm update -g # only if image was too old
 RUN npm install npm@latest -g
 RUN npm install
 COPY ./frontend/ ./
