--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,24 +1,21 @@
 # specify a base image for compiling
-FROM node AS build
+FROM node:lts AS build
 WORKDIR /usr/app
 
 # install dependencies
 COPY ./backend/package*.json ./
-#RUN npm update -g # only if image was too old
-RUN npm install npm@latest -g
 RUN npm install
 COPY ./backend/ ./
 RUN npm run comp
 
 # specify base image
-FROM node:alpine
+FROM node:lts-alpine
 WORKDIR /usr/app
 
 # install dependencies
 COPY ./backend/package*.json ./
 COPY --from=build /usr/app/dist ./dist
-RUN npm install npm@latest -g
-RUN npm update -g # only if image was too old
+RUN npm update -g
 RUN npm ci --only-production
 
 # port
