moved env.js to enable volume mapping for that, added and commented out reverse proxy capabilities for backend

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,10 @@ upstream boat {
     server  www.boat.bva.bund.de:443;
 }
 
+# upstream backend {
+#     server backend:8000;
+# }
+
 server {
     listen       80;
     listen  [::]:80;
@@ -19,14 +23,19 @@ server {
     location /api {
         proxy_pass https://boat;
         proxy_pass_header ContentType;
-	proxy_ssl_session_reuse on;
+	    proxy_ssl_session_reuse on;
     }
 
     location /auth {
         proxy_pass https://boat;
         proxy_pass_header ContentType;
-	proxy_ssl_session_reuse on;
+    	proxy_ssl_session_reuse on;
     }
+
+    # location /rest {
+    #     proxy_pass http://backend;
+    #     proxy_pass_header ContentType;
+    # }
 
     error_page  404              /index.html;
 
