--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -32,7 +32,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/env.js"
+              "src/conf"
             ],
             "styles": [
               "src/styles.scss"
