set variable backend proxy, but let it commented out

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -234,5 +234,5 @@ ProxyPassReverse "/auth/login" "https://www.boat.bva.bund.de/auth/login"
 PassEnv HTTP_PROXY
 ProxyRemote "https://www.boat.bva.bund.de" "${HTTP_PROXY}"
 
-#ProxyPass "/rest" "http://backend:8000"
-#ProxyPassReverse "/rest" "http://backend:8000"
+#ProxyPass "/rest" "${BACKEND_URL}"
+#ProxyPassReverse "/rest" "${BACKEND_URL}"
