--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.0.3",
-    "@angular/common": "^13.0.3",
-    "@angular/compiler": "^13.0.3",
-    "@angular/core": "^13.0.3",
-    "@angular/forms": "^13.0.3",
-    "@angular/platform-browser": "^13.0.3",
-    "@angular/platform-browser-dynamic": "^13.0.3",
-    "@angular/router": "^13.0.3",
-    "@ngrx/effects": "^13.0.1",
-    "@ngrx/store": "^13.0.1",
-    "@ngrx/store-devtools": "^13.0.1",
+    "@angular/animations": "^13.1.0",
+    "@angular/common": "^13.1.0",
+    "@angular/compiler": "^13.1.0",
+    "@angular/core": "^13.1.0",
+    "@angular/forms": "^13.1.0",
+    "@angular/platform-browser": "^13.1.0",
+    "@angular/platform-browser-dynamic": "^13.1.0",
+    "@angular/router": "^13.1.0",
+    "@ngrx/effects": "^13.0.2",
+    "@ngrx/store": "^13.0.2",
+    "@ngrx/store-devtools": "^13.0.2",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.1",
     "xlsx": "^0.17.4",
@@ -31,12 +31,12 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.4",
     "@angular/cli": "^13.0.4",
-    "@angular/compiler-cli": "^13.0.3",
-    "@angular/localize": "^13.0.3",
+    "@angular/compiler-cli": "^13.1.0",
+    "@angular/localize": "^13.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.37",
     "https-proxy-agent": "^5.0.0",
-    "jasmine-core": "~3.7.0",
+    "jasmine-core": "3.8",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
