--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boat3_extensions_frontend",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -35,6 +35,8 @@
     "@angular/localize": "^13.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.37",
+    "grunt": "^1.4.1",
+    "grunt-bump": "^0.8.0",
     "https-proxy-agent": "^5.0.0",
     "jasmine-core": "3.8",
     "karma": "^6.3.9",
