--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.1",
-    "@angular/common": "^13.3.1",
-    "@angular/compiler": "^13.3.1",
-    "@angular/core": "^13.3.1",
-    "@angular/forms": "^13.3.1",
-    "@angular/platform-browser": "^13.3.1",
-    "@angular/platform-browser-dynamic": "^13.3.1",
-    "@angular/router": "^13.3.1",
+    "@angular/animations": "^13.3.2",
+    "@angular/common": "^13.3.2",
+    "@angular/compiler": "^13.3.2",
+    "@angular/core": "^13.3.2",
+    "@angular/forms": "^13.3.2",
+    "@angular/platform-browser": "^13.3.2",
+    "@angular/platform-browser-dynamic": "^13.3.2",
+    "@angular/router": "^13.3.2",
     "@ngrx/effects": "^13.1.0",
     "@ngrx/store": "^13.1.0",
     "@ngrx/store-devtools": "^13.1.0",
+    "mssql": "^8.1.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.1",
-    "xlsx": "^0.17.4",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.1",
-    "@angular/cli": "^13.3.1",
-    "@angular/compiler-cli": "^13.3.1",
-    "@angular/localize": "^13.3.1",
+    "@angular-devkit/build-angular": "^13.3.2",
+    "@angular/cli": "^13.3.2",
+    "@angular/compiler-cli": "^13.3.2",
+    "@angular/localize": "^13.3.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.37",
     "grunt": "^1.4.1",
