--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -15,7 +15,7 @@ WORKDIR /usr/app
 # install dependencies
 COPY ./backend/package*.json ./
 COPY --from=build /usr/app/dist ./dist
-RUN npm update -g
+RUN npm update --location=global
 RUN npm ci --only-production
 
 # port
