--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,7 +2,7 @@ FROM node:lts AS build
 WORKDIR /usr/app
 
 COPY ./frontend/package*.json ./
-#RUN npm update -g # only if image was too old
+#RUN npm update --location=global # only if image was too old
 RUN npm install
 COPY ./frontend/ ./
 RUN npm run build:prod
