ng update & npm update to angular v15

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -3,7 +3,7 @@ WORKDIR /usr/app
 
 COPY ./frontend/package*.json ./
 #RUN npm update --location=global # only if image was too old
-RUN npm install
+RUN npm install --force
 COPY ./frontend/ ./
 RUN npm run build:prod
 
