security settings for container changed to no longer use rootdocker root

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -18,6 +18,8 @@ COPY --from=build /usr/app/dist ./dist
 RUN npm update --location=global
 RUN npm ci --only-production
 
+# user context to run in
+USER node
 # port
 EXPOSE 8000
 # default command
