--- a/Dockerfile.ep-frontend
+++ b/Dockerfile.ep-frontend
@@ -2,7 +2,7 @@ FROM node:lts AS build
 WORKDIR /usr/app
 
 COPY ./frontend/package*.json ./
-RUN npm install --force
+RUN npm install --force --verbose
 COPY ./frontend/ ./
 RUN npm run build:prod
 
